# hsfl-bachelor-thesis

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: build-docker-release.yaml  frontend-on-merge.yaml
experiment/: package.json
experiment/benchmarks/: package.json  tsconfig.json
experiment/benchmarks/src/targets/wasm/matrix/: Cargo.toml
experiment/benchmarks/src/targets/wasm/matrix/src/: lib.rs  matrix.rs
experiment/benchmarks/src/targets/wasm/utils/: Cargo.toml
experiment/benchmarks/src/targets/wasm/utils/benchmark/: Cargo.toml
experiment/benchmarks/src/targets/wasm/utils/benchmark/src/: lib.rs  report.rs
experiment/benchmarks/src/targets/wasm/utils/benchmark/src/benchmark/: measure.rs  mod.rs  reporter.rs  runner.rs
experiment/benchmarks/src/targets/wasm/utils/src/: report.rs
experiment/benchmarks/src/targets/wasm/utils/src/benchmark/: measure.rs  runner.rs
experiment/jupyter/: mandelBrotWasmMacosBrowserGroup.csv  matrixPlotData.csv  (+21 more)
thesis/: 00-Inhaltsverzeichnis.md  01-Einleitung.md  02-Grundlagen.md  02-JavaScript-TypeScript.md  03-Leistungsmerkmale.md  03-WebAssembly.md  03-Webbrowser.md  04-Webanwendungen.md  04-Webbrowser.md  05-JavaScript-Engine.md  06-Forschungsdesign.md  06-Planung.md  06-Stichproben.md  07-Durchfuehrung.md  07-Laboraufbau.md  08-Ergebnisse.md  09-Fazit.md  95-Literaturverzeichnis.md  96-Eidesstaatliche_Erklaerung.md  97-Anhangsverzeichnis.md  97-Literatur-und-Anhangsverzeichnis.md  98-Anhang.md  99-Eidesstaatliche_Erklaerung.md  Forschungsdesign.md.bak  create.sh  defaults.yaml  notes.md  refs.bib
(+115 files in other folders)
