[package]
name = "matrix"
version = "0.1.0"
authors = ["Cedrik Hoffmann <cedrik.hoffmann@jgdperl.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Performance", "console"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
serde = "1.0"
serde_derive = "1.0"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
