[package]
name = "benchmark_utils"
version = "0.1.0"
authors = ["Cedrik Hoffmann <cedrik.hoffmann@jgdperl.com>"]
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2" }
serde = "1.0"
serde_derive = "1.0"
serde-wasm-bindgen = "0.6"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
web-sys = { version = "0.3" }
